--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,7 +1,7 @@
 {
   "orgName": "Demo company",
   "edition": "Developer",
-  "features": ["EnableSetPasswordInApi"],
+  "features": ["EnableSetPasswordInApi", "EinsteinGPTForDevelopers"],
   "hasSampleData": true,
   "settings": {
     "lightningExperienceSettings": {
